2008-12-22  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Request modules emulating mb functions.
	* configure.ac: Do not look for mb functions here.

2008-10-03  Paolo Bonzini  <bonzini@gnu.org>
	    Jim Meyering  <meyering@redhat.com>

	* autoboot.conf: Add localcharset.
	* Makefile.am: Remove intl subdir.  Require Automake 1.10.
	* configure.ac: Remove useless macros, switch to external gettext.
	* lib/Makefile.am: Remove intl subdir from CPPFLAGS.
	* sed/Makefile.am: Remove intl subdir from CPPFLAGS.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot: Sync with gnulib's build-aux/bootstrap.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add vasnprintf.
	* basicdefs.h: Replace alloca cruft with alloca.h.
	* bootstrap.sh.in: Update for new gnulib.
	* bootstrap.sh: Update for new gnulib.
	* configure.ac: Move gnulib macros earlier.
	* sed/execute.c: Do not include acl.h when bootstrapping.

2008-09-29  Paolo Bonzini  <bonzini@gnu.org>

	* NEWS: Document `z' extension.
	* doc/sed-in.texi: Document `z' extension, and GNU sed's s/.*.//
	behavior with invalid multibyte sequences.
	* sed/compile.c (compile_program): Recognize `z'.
	* sed/execute.c (execute_program): Execute `z'.
	* testsuite/Makefile.am: Add badenc test.
	* testsuite/Makefile.tests: Add badenc test.
	* testsuite/badenc.good: New.
	* testsuite/badenc.inp: New.
	* testsuite/badenc.sed: New.

2008-08-27  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): Close the input file!

2008-08-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Add gl_DISABLE_THREADS.

2008-08-20  Ralf Wildenhues  <ralf.wildenhues@gmx.de

	* doc/sed-in.texi: Drop leading whitespace where appropriate,
	do not use TABs.
	* doc/sed.texi: Regnerate.

2008-08-19  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Do not include strverscmp.c.

2008-07-21  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Remove northpark.edu address for sed FAQ.
	* doc/sed.texi: Regenerate.
